examples/pos/with_val_many_args.effekt
module with_val_many_args

def callback { f: (Int, Int, String, Char) => Unit }: Unit =
  f(42, 100, "hello", 'a')

def main() = {
  with val i, j, _, c = callback;
  println(show(i) ++ ", " ++ show(j) ++ "; " ++ show(c))
}