examples/neg/typer/expected_args_got_lambdacase.effekt
def foo { f: (Int, String) => Unit }: Unit = f(42, "hello")

def main() = foo { case (n, s) =>
  println(n)
}